<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:padding="@dimen/bigMargin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <NumberPicker
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/numberPickerHeight"
        android:layout_marginEnd="@dimen/mainMargin"
        android:layout_marginBottom="@dimen/mainMargin"
        android:orientation="vertical"
        android:theme="@style/numberPicker"
        app:layout_constraintEnd_toStartOf="@+id/month"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/titleMainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:textSize="@dimen/smallTextSize"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="@+id/day"
        app:layout_constraintStart_toStartOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <NumberPicker
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/numberPickerHeight"
        android:layout_marginBottom="@dimen/mainMargin"
        android:orientation="vertical"
        android:theme="@style/numberPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/titleMainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:textSize="@dimen/smallTextSize"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="@+id/month"
        app:layout_constraintStart_toStartOf="@+id/month"
        app:layout_constraintTop_toBottomOf="@+id/month" />

    <NumberPicker
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/numberPickerHeight"
        android:layout_marginStart="@dimen/mainMargin"
        android:layout_marginBottom="@dimen/mainMargin"
        android:orientation="vertical"
        android:theme="@style/numberPicker"
        app:layout_constraintStart_toEndOf="@+id/month"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/titleMainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="@dimen/smallTextSize"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="@+id/year"
        app:layout_constraintStart_toStartOf="@+id/year"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <Button
        android:id="@+id/btnSearch"
        style="@style/mainBtnStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/search"/>

</androidx.constraintlayout.widget.ConstraintLayout>